// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shipping Form should render correctly 1`] = `
<Fragment>
  <Styled(View)>
    <FormSection
      name="address"
    >
      <AddressFields
        addressFormLabels={Object {}}
        addressPhoneNo={null}
        disableCountry={true}
        formName="checkoutShipping"
        formSection="address"
        initialValues={Object {}}
        isGuest={true}
        showDefaultCheckbox={false}
        showEmailAddress={true}
        showPhoneNumber={true}
        showUserName={true}
      />
    </FormSection>
    <FormSection
      name="smsSignUp"
    >
      <SMSFormFields
        addressPhoneNo={null}
        dispatch={[Function]}
        formName="checkoutShipping"
        formSection="smsSignUp"
        isOrderUpdateChecked={false}
        labels={Object {}}
        showDefaultCheckbox={false}
      />
    </FormSection>
    <FormSection
      name="shipmentMethods"
    >
      <ShipmentMethods
        formName="checkoutShipping"
        formSection="shipmentMethods"
        selectedShipmentId={null}
        shipmentHeader="lbl_shipping_shipmentHeader"
        shipmentMethods={null}
      />
    </FormSection>
    <FormSection
      name="giftServices"
    >
      <Connect(GiftServicesContainer)
        formSection="giftServices"
        showDefaultCheckbox={false}
        variation="secondary"
      />
    </FormSection>
  </Styled(View)>
  <CnCCommonTemplate
    backLinkText={false}
    btnText="lbl_shipping_billingText"
    isConfirmationPage={false}
    isGuest={true}
    onBackLinkPress={[Function]}
    onPress={[Function]}
    pageCategory="shippingPage"
    routeToPage=""
    showAccordian={true}
  />
</Fragment>
`;

exports[`Shipping Form should render correctly with non us site 1`] = `
<Fragment>
  <Styled(View)>
    <FormSection
      name="address"
    >
      <AddressFields
        addressFormLabels={Object {}}
        addressPhoneNo={null}
        disableCountry={true}
        formName="checkoutShipping"
        formSection="address"
        initialValues={Object {}}
        isGuest={true}
        showDefaultCheckbox={false}
        showEmailAddress={true}
        showPhoneNumber={true}
        showUserName={true}
      />
    </FormSection>
    <FormSection
      name="emailSignUp"
    >
      <Styled(View)>
        <Styled(View)>
          <Field
            component={[Function]}
            dataLocator="signUp-checkbox-field"
            name="sendEmailSignup"
          />
          <Styled(BodyCopy)
            accessibilityText=""
            dataLocator="shipping-email-signUp-heading-lbl"
            fontFamily="secondary"
            fontSize="fs14"
            fontWeight="regular"
            margin={null}
            numberOfLines={null}
            text="lbl_pickup_emailSignupHeading"
            textDecoration={null}
          />
        </Styled(View)>
        <Styled(BodyCopy)
          accessibilityText=""
          dataLocator="shipping-email-signUp-sub-heading-text"
          fontFamily="secondary"
          fontSize="fs12"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="lbl_pickup_emailSignupSubHeading"
          textDecoration={null}
        />
        <Styled(BodyCopy)
          accessibilityText=""
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs12"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="lbl_pickup_emailSignupSubSubHeading"
          textDecoration={null}
        />
        <Styled(Anchor)
          accessibilityLabel=""
          anchorVariation="primary"
          colorName={null}
          customStyle={Object {}}
          dataLocator="shipping-email-signUp-contact-anchor"
          fontSizeVariation="small"
          href="#"
          locator=""
          margins={null}
          noLink={true}
          noUnderline={true}
          onPress={null}
          target="_blank"
          text="lbl_pickup_emailSignupContact"
          visible={false}
        />
      </Styled(View)>
    </FormSection>
    <FormSection
      name="shipmentMethods"
    >
      <ShipmentMethods
        formName="checkoutShipping"
        formSection="shipmentMethods"
        selectedShipmentId={null}
        shipmentHeader="lbl_shipping_shipmentHeader"
        shipmentMethods={null}
      />
    </FormSection>
    <FormSection
      name="giftServices"
    >
      <Connect(GiftServicesContainer)
        formSection="giftServices"
        showDefaultCheckbox={false}
        variation="secondary"
      />
    </FormSection>
  </Styled(View)>
  <CnCCommonTemplate
    backLinkText={false}
    btnText="lbl_shipping_billingText"
    isConfirmationPage={false}
    isGuest={true}
    onBackLinkPress={[Function]}
    onPress={[Function]}
    pageCategory="shippingPage"
    routeToPage=""
    showAccordian={true}
  />
</Fragment>
`;

exports[`Shipping Form should render correctly with signed in 1`] = `
<Fragment>
  <Styled(View)>
    <RegisteredShippingForm
      addNewShippingAddress={[Function]}
      address={null}
      addressFormLabels={Object {}}
      addressPhoneNo={null}
      defaultAddressId={null}
      editShipmentDetailsError=""
      formName="checkoutShipping"
      isGuest={false}
      isSaveToAddressBookChecked={false}
      newUserPhoneNo={null}
      onFileAddressKey={null}
      setAsDefaultShipping={null}
      setEditModalRef={[Function]}
      setEditState={[Function]}
      shippingAddress={null}
      syncErrorsObject={Object {}}
      updateShippingAddress={[Function]}
      userAddresses={null}
    />
    <FormSection
      name="smsSignUp"
    >
      <SMSFormFields
        addressPhoneNo={null}
        dispatch={[Function]}
        formName="checkoutShipping"
        formSection="smsSignUp"
        isOrderUpdateChecked={false}
        labels={Object {}}
        showDefaultCheckbox={false}
      />
    </FormSection>
    <FormSection
      name="shipmentMethods"
    >
      <ShipmentMethods
        formName="checkoutShipping"
        formSection="shipmentMethods"
        selectedShipmentId={null}
        shipmentHeader="lbl_shipping_shipmentHeader"
        shipmentMethods={null}
      />
    </FormSection>
    <FormSection
      name="giftServices"
    >
      <Connect(GiftServicesContainer)
        formSection="giftServices"
        showDefaultCheckbox={false}
        variation="secondary"
      />
    </FormSection>
  </Styled(View)>
  <CnCCommonTemplate
    backLinkText={false}
    btnText="lbl_shipping_billingText"
    isConfirmationPage={false}
    isGuest={false}
    onBackLinkPress={[Function]}
    onPress={[Function]}
    pageCategory="shippingPage"
    routeToPage=""
    showAccordian={true}
  />
</Fragment>
`;
